--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -15,7 +15,7 @@ For the PAS for Windows release notes, see the [Release Notes](release-notes.htm
 
 ## <a id='contents'></a>Contents
 
-### <a id='understand'></a>Understanding PAS for Windows 2012R2 ##
+### <a id='understand'></a>Understanding PAS for Windows ##
 
 * <a href="architecture.html" class="subnav">Product Architecture</a>
 
