--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -23,7 +23,7 @@ The latest versions of your existing products appear in the **Ops Manager Instal
 
 1. When the download completes, click **Apply Changes**.
 
-1. If necessary, configure the product. For more information about configuring PAS for Windows, see the [Deploying PAS for Windows](./deploy-windows.html) topic.
+1. If necessary, configure the product. For more information about configuring PAS for Windows, see the [Installing and Configuring PAS for Windows](./installing.html) topic.
 
 1. Locate the **Pending Changes** section on the right-hand side of the screen and click **Apply Changes**.
 
