--- a/docs-content/windows-security.html.md.erb
+++ b/docs-content/windows-security.html.md.erb
@@ -9,7 +9,7 @@ This topic provides a description of the security measures that Pivotal uses to 
 
 ##<a id="group-policy-list"></a>Local Group Policy Settings
 
-The Windows stemcell contains a version of Windows Server 2012 R2 with a set of Local Group Policy settings optimized for security. These settings begin with the WS2012R2 Member Server Security Compliance v1.0 baseline, included in Microsoft Security Compliance Manager v4.0. For more information about this baseline, see the [Microsoft Security Guidance blog](https://blogs.technet.microsoft.com/secguide/2014/08/13/security-baselines-for-windows-8-1-windows-server-2012-r2-and-internet-explorer-11-final/). 
+The Windows stemcell contains a version of Windows Server 2016 with a set of Local Group Policy settings optimized for security. These settings begin with the [Security baseline for Windows Server 2016 Techical Preview (TP5)](https://blogs.technet.microsoft.com/secguide/2016/05/27/security-baseline-for-windows-server-2016-technical-preview-5-tp5/).
 
 Pivotal has collaborated with Microsoft to further harden the stemcell by implementing Local Security Policies settings, according to the recommended security baseline defined in Microsoft Security Compliance Manager. The table below lists these overrides.
 
