--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -9,11 +9,11 @@ This topic describes how to push .NET apps to Windows cells.
 
 ## <a id='overview'></a> Overview
 
-After operators install and configure the Pivotal Application Service (PAS) for Windows 2012R2 tile, developers can push .NET apps to the Windows cell. For documentation about installing the PAS for Windows 2012R2 tile, see the [Deploying PAS for Windows 2012R2](deploy-windows.html) topic. Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted).
+After operators install and configure the Pivotal Application Service (PAS) for Windows tile, developers can push .NET apps to the Windows cell. For documentation about installing the PAS for Windows tile, see the [Installing and Configuring PAS for Windows](installing.html) topic. Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted).
 
 Operators must also install the Cloud Foundry Command Line Interface (cf CLI) to run the commands on this topic. For information about installing the cf CLI, see the [Installing the cf CLI](../cf-cli/install-go-cli.html) topic.
 
-If you have upgraded to PAS for Windows 2012R2 and have apps that you want to migrate, see the [Upgrading Windows Cells](upgrade-windows.html) topic.
+If you have upgraded to PAS for Windows and have apps that you want to migrate, see the [Upgrading Cells](upgrade-windows.html) topic.
 
 ##<a id='push'></a> Push a .NET App
 
@@ -28,14 +28,14 @@ Perform the following steps to push a .NET app to a Windows cell:
 
 1. Run one of the following commands to deploy your .NET app, replacing `APP-NAME` with the name of your app.
     <br><br>
-    * If you want to deploy a .NET Framework app, run `cf push APP-NAME -s windows2012R2 -b hwc_buildpack`:
+    * If you want to deploy a .NET Framework app, run `cf push APP-NAME -s windows -b hwc_buildpack`:
     <pre class="terminal">
-    $ cf push APP-NAME -s windows2012R2 -b hwc_buildpack
+    $ cf push APP-NAME -s windows -b hwc_buildpack
     </pre>
-    * If you want to deploy an app with <code>.bat</code> or <code>.exe</code> files, run `cf push -s windows2012R2 -b binary_buildpack`:
-    <pre class="terminal">$ cf push -s windows2012R2 -b binary_buildpack</pre>
+    * If you want to deploy an app with <code>.bat</code> or <code>.exe</code> files, run `cf push -s windows -b binary_buildpack`:
+    <pre class="terminal">$ cf push -s windows -b binary_buildpack</pre>
     <br>
-    The `-s windows2012R2` option instructs PCF to run the app in the Windows cell. If you are not pushing your app from its directory, use the `-p` option and specify the path to the directory that contains the app.
+    The `-s windows` option instructs PCF to run the app in the Windows cell. If you are not pushing your app from its directory, use the `-p` option and specify the path to the directory that contains the app.
 
 1. Wait for your app to stage and start. If you see an error message, refer to the [Troubleshoot App Errors](#troubleshoot) section of this topic.
 
@@ -50,10 +50,10 @@ Perform the following steps to push a self-hosted app:
     $ cf api api.YOUR-SYSTEM-DOMAIN
     </pre>
 
-1. Run `cf push APP-NAME -s windows2012R2 -b binary_buildpack -c PATH-TO-BINARY` to push your .NET app from the app root. Replace `APP-NAME` with the name of your app and `PATH-TO-BINARY` with the path to your executable.
+1. Run `cf push APP-NAME -s windows -b binary_buildpack -c PATH-TO-BINARY` to push your .NET app from the app root. Replace `APP-NAME` with the name of your app and `PATH-TO-BINARY` with the path to your executable.
 
     <pre class="terminal">
-    $ cf push APP-NAME -s windows2012R2 -b binary_buildpack -c PATH-TO-BINARY
+    $ cf push APP-NAME -s windows -b binary_buildpack -c PATH-TO-BINARY
     </pre>
 
 1. Wait for your app to stage and start. If you see an error message, refer to the [Troubleshoot App Errors](#troubleshoot) section of this topic.
@@ -68,12 +68,12 @@ Perform the following steps to deploy a SOAP web service:
 
 1. Develop the service as an ASMX web service in Microsoft Visual Studio.
 1. Publish the service to your local file system.
-1. Run `cf push SERVICE-NAME -s windows2012R2 -b hwc_buildpack -u none` to push your service from the directory containing the published web service. Replace `SERVICE-NAME` with the name of your service:
+1. Run `cf push SERVICE-NAME -s windows -b hwc_buildpack -u none` to push your service from the directory containing the published web service. Replace `SERVICE-NAME` with the name of your service:
     <pre class="terminal">
-    $ cf push SERVICE-NAME -s windows2012R2 -b hwc_buildpack -u none
+    $ cf push SERVICE-NAME -s windows -b hwc_buildpack -u none
     </pre>
     <br>
-    The push command must include the `-s` flag to specify the stack as `windows2012R2`, which instructs PCF to run the app in the Windows cell.
+    The push command must include the `-s` flag to specify the stack as `windows`, which instructs PCF to run the app in the Windows cell.
     <br><br>
     The push command can include the following optional flags:
     * If you are not pushing your service from the directory containing the published web service, use the `-p` flag to specify the path to the directory that contains the published web service.
@@ -87,7 +87,7 @@ Perform the following steps to deploy a SOAP web service:
     usage: 1G x 1 instances
     urls: YOUR-WEB-SERVICE.YOUR-DOMAIN
     last uploaded: Thu Nov 17 19:18:19 UTC 2016
-    stack: windows2012R2
+    stack: windows
     buildpack: hwc_buildpack
     </pre>
 
