add images and fix linx [#151827005]

--- a/docs-content/architecture.html.md.erb
+++ b/docs-content/architecture.html.md.erb
@@ -72,16 +72,4 @@ The BOSH Agent is responsible for executing and monitoring "jobs" on the VM.
 
 Deployments of Windows Server on PCF currently use a stemcell containing Windows Server 2016.
 
-### <a id="light-stemcells"></a> Light Stemcells
-
-"Light" stemcells are metadata files used on a public IaaS that enable users to reference and deploy a stemcell without uploading it manually.
-
-Below is the documentation currently available for activating light stemcells for the PAS for Windows tile:
-
-+ <a href="../windows/azure-light-stemcell.html" class="subnav"> Deploying on Azure</a>
-
-### <a id="stemcell-builds"></a> Stemcell Builds
-
-Below is the documentation currently available for building stemcells for the PAS for Windows tile:
-
-+ <a href="../windows/vsphere-stemcell-build.html" class="subnav"> vSphere Stemcell Build</a>
+See [Downloading or Creating Windows Stemcells](./stemcells.html) for documentation about how to obtain or create a stemcell for PAS for Windows.
