--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -11,7 +11,7 @@ To install the PAS for Windows tile, you must have:
 
 * Ops Manager v2.0 or later and PAS v2.0 or later deployed to vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure
 
-* A windows stemcell, which you can obtain by following the directions in [Downloading or Creating Windows Stemcells](./stemcell.html).
+* A windows stemcell, which you can obtain by following the directions in [Downloading or Creating Windows Stemcells](./stemcells.html).
 
 The minimum resource requirement for each Windows cell is:
 
@@ -76,13 +76,13 @@ There are two settings in the PAS tile that affect the Windows cells installed b
 
     <%= image_tag('pcf-windows-tile-stemcell.png') %>
 
-1. Retrieve the stemcell that you downloaded or created in [Download or Create a Windows Stemcell](./stemcell.html).
+1. Retrieve the stemcell that you downloaded or created in [Download or Create a Windows Stemcell](./stemcells.html).
 
 1. Click **Save**.
 
 1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the PAS for Windows tile.
 
-After you have deployed the PAS for Windows tile, developers can then push .NET applications to Windows cells. For more information, see the [Deploying .NET Apps to Windows Cells](push-windows-apps.html) topic.
+After you have deployed the PAS for Windows tile, developers can then push .NET applications to Windows cells. For more information, see the [Developing and Deploying .NET Apps](./using.html) topic.
 
 ##<a id='copy'></a> Step 4: (Optional) Copy the Tile
 
