update local standalone subnav to match existing files

--- a/docs-book/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/windows_subnav.erb
@@ -18,6 +18,9 @@
             <li>
               <a href="/pas-windows/architecture.html">Product Architecture</a>
             </li>
+            <li class="">
+              <a href="/pas-windows/windows-security.html">Windows Stemcell Hardening</a>
+            </li>
             <li>
               <a href="/pas-windows/release-notes.html">Release Notes</a>
             </li>
@@ -31,11 +34,17 @@
         </div>
         <div class="menu-content js-menu-content" aria-hidden="true">
           <ul>
+            <li class="">
+              <a href="/pas-windows/stemcells.html">Downloading or Creating Windows Stemcells</a>
+            </li>
             <li>
               <a href="/pas-windows/installing.html">Installing and Configuring PAS for Windows</a>
             </li>
-            <li>
-              <a href="/pas-windows/managing.html">Managing PAS for Windows</a>
+            <li class="">
+              <a href="/pas-windows/configure-kms.html">Configuring a KMS Host</a>
+            </li>
+            <li class="">
+              <a href="/pas-windows/upgrade-windows.html">Upgrading Windows Cells</a>
             </li>
             <li>
               <a href="/pas-windows/troubleshooting.html">Troubleshooting PAS for Windows</a>
@@ -61,3 +70,4 @@
   </div>
 </div>
 <!--end of sub-nav-->
+
