add known issues and stemcell sizing [#152421230]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -52,8 +52,16 @@ The minimum resource requirement for each Windows cell:
 
 * <a href="push-windows-apps.html" class="subnav">Deploying .NET Apps to Windows Cells</a>
 
-## <a id='rotate'></a>Rotating Credentials
+## <a id='issues'></a>Known Issues
 
-The Elastic Runtime tile handles all of the credentials for PCF Runtime for Windows.
+PCF Runtime for Windows has the following known issues:
 
-To rotate your credentials in PCF Runtime for Windows, re-deploy Elastic Runtime and PCF Runtime for Windows by navigating to the Ops Manager Installation Dashboard and clicking **Apply Changes**.
+* Windows cells can host a maximum of 40 app instances.
+
+* In the PCF Runtime for Windows tile **Credentials** tab, for either **Windows Diego Cell** or **Install HWS Buildpack Errand**, the `vcap` credentials that appear when you click **VM Credentials** > **Link to Credential** are meaningless. Windows cells have no vcap user.
+
+* Under **VM Options** > **Manage Administrator Password** > **Set the password**, setting the admin user password has the following limitations:
+
+  - Azure and GCP: setting the password does not work. You can only **Use random administrator password**.
+
+  - AWS and vSphere: the password must be 8-14 characters; and must use letters, numbers and the `!` character, which is the only allowed special character.
