--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -33,7 +33,7 @@ For the PAS for Windows release notes, see the [Release Notes](release-notes.htm
 
 * <a href="./configure-kms.html" class="subnav">Configuring a KMS Host</a>
 
-* <a href="./windows-troubleshooting.html" class="subnav">Troubleshooting Windows Cells</a>
+* <a href="./troubleshooting.html" class="subnav">Troubleshooting Windows Cells</a>
 
 ## <a id='dev'></a>Developer Guide
 
