--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -140,6 +140,6 @@ Developers of external applications that consume the SOAP web service can perfor
 
 If a .NET app fails to start, consult the following list of errors and their possible solutions:
 
-* `NoCompatibleCell`: Your PCF deployment cannot connect to your Windows cell. See the [Troubleshooting Windows Cells](windows-troubleshooting.html) topic for information about troubleshooting your Windows cell configuration.
+* `NoCompatibleCell`: Your PCF deployment cannot connect to your Windows cell. See the [Troubleshooting Windows Cells](troubleshooting.html) topic for information about troubleshooting your Windows cell configuration.
 
 * `Start unsuccessful`: Your app may not contain the required DLL files and dependencies. Ensure that you are pushing from a directory containing your app dependencies, or specify the directory with the `-p` flag. Your app also may be misconfigured. Ensure that your app directory contains either a valid `.exe` binary or a valid `Web.config` file.
