move Requirements to index [#152735578]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -13,6 +13,20 @@ For more information about how PAS for Windows works, see the [Product Architect
 
 For the PAS for Windows release notes, see the [Release Notes](release-notes.html) topic.
 
+## <a id='reqs'></a> Requirements
+
+To install the PAS for Windows tile, you must have:
+
+* Ops Manager v2.0 or later and PAS v2.0 or later deployed to vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure
+
+* A windows stemcell, which you can obtain by following the directions in [Downloading or Creating Windows Stemcells](./stemcells.html).
+
+The minimum resource requirement for each Windows cell is:
+
+- Disk size: 64&nbsp;GB
+- Memory: 16&nbsp;GB
+- CPUs: 4
+
 ## <a id='contents'></a>Contents
 
 ### <a id='understand'></a>Understanding PAS for Windows ##
