fix hed levels [#151827005]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -41,7 +41,7 @@ The minimum resource requirement for each Windows cell is:
 
 * <a href="installing.html" class="subnav">Installing and Configuring PAS for Windows</a>
 
-## <a id='admin'></a>Admin Guide
+### <a id='admin'></a>Admin Guide
 
 * <a href="./upgrade-windows.html" class="subnav">Upgrading Windows Cells</a>
 
@@ -49,6 +49,6 @@ The minimum resource requirement for each Windows cell is:
 
 * <a href="./troubleshooting.html" class="subnav">Troubleshooting Windows Cells</a>
 
-## <a id='dev'></a>Developer Guide
+### <a id='dev'></a>Developer Guide
 
 * <a href="using.html" class="subnav">Developing and Deploying .NET Apps</a>
