--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -83,7 +83,7 @@ After you have deployed the PAS for Windows tile, developers can then push .NET 
 
 You can deploy multiple copies of the PAS for Windows tile to create isolation segments for Windows cells. Isolation segments define compartmentalized resource pools for Diego cells that do not share routing, computing, or logging resources, but are managed by the same Cloud Controller.
 
-See [Windows Isolation Segment](#isolation) below for how to create multiple Windows isolation segments. The [Installing PCF Isolation Segment](../customizing/installing-pcf-is.html) topic explains how to create Linux isolation segments.
+See the [Replicate the Tile to Create Isolation Segments](#isolation) step below for how to create multiple Windows isolation segments. The [Installing PCF Isolation Segment](../customizing/installing-pcf-is.html) topic explains how to create Linux isolation segments.
 
 ##<a id='copy'></a> Step 4: (Optional) Replicate the Tile to Create Isolation Segments
 
