--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -48,16 +48,7 @@ There are two settings in the PAS tile that affect the Windows cells installed b
 
     ![The enable KMS text fields: host and port](enable-kms.png)
 
-1. (Optional) If you want your PAS for Windows application workloads to be deployed to an isolation segment, perform the following steps:
-
-    1. Click **Application Containers**.
-
-        <%= image_tag('app_containers_segment_name.png') %>
-    1. Under **Segment Name**, enter a name for your isolation segment. Ensure that this name is unique across your PCF deployment.
-
-    1. Click **Save**.
-    
-    1. Perform the steps in the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic to create the isolation segment in the Cloud Controller Database (CCDB).
+1. (Optional) If you want your PAS for Windows application workloads to be deployed to an isolation segment, perform the steps in [Assign a Tile to an Isolation Segment](#assign-isolation) below.
 
 1. Click **Errands**. Pivotal recommends that you set the **Install HWC Buildpack Errand** to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
 	
@@ -77,17 +68,27 @@ There are two settings in the PAS tile that affect the Windows cells installed b
 
 1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the PAS for Windows tile.
 
-After you have deployed the PAS for Windows tile, developers can then push .NET applications to Windows cells. For more information, see the [Developing and Deploying .NET Apps](./using.html) topic.
+##<a id='copy'></a> Step 4: (Optional) Create More Tiles
 
-###<a id='isolation'></a> Windows Isolation Segments
+If you want to run Windows cells in multiple isolation segments, you must create and configure additional PAS for Windows tiles. See [Windows Cells in Isolation Segments](#isolation) below for how to do this.
 
-You can deploy multiple copies of the PAS for Windows tile to create isolation segments for Windows cells. Isolation segments define compartmentalized resource pools for Diego cells that do not share routing, computing, or logging resources, but are managed by the same Cloud Controller.
+##<a id='isolation'></a> Windows Cells in Isolation Segments
 
-See the [Replicate the Tile to Create Isolation Segments](#isolation) step below for how to create multiple Windows isolation segments. The [Installing PCF Isolation Segment](../customizing/installing-pcf-is.html) topic explains how to create Linux isolation segments.
+Isolation segments are compartmentalized resource pools for Diego cells. The cells in one isolation segment share routing, computing, and logging resources with other cells in the same segment, and don't use resources from other isolation segments.
 
-##<a id='copy'></a> Step 4: (Optional) Replicate the Tile to Create Isolation Segments
+To run Windows cells in multiple isolation segments, you need to create and install multiple PAS for Windows tiles and configure each to run in a different isolation segment.
 
-You can use the Replicator tool to copy the **PAS for Windows** tile and create multiple isolation segments as follows:
+If the isolation segments do not already exist in the Cloud Controller database, you need to create them there.
+
+See [Replicate a Tile](#replicate) for how to create multiple copies of the PAS for Windows tile.
+
+See [Assign a Tile to an Isolation Segment](#assign-isolation) for how to associate a PAS for Windows tile with an isolation segment, so that its cells run in that segment. 
+
+See the the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic for how to add an isolation segment to the Cloud Controller Database (CCDB).
+
+###<a id='replicate'></a> Replicate a Tile
+
+To make multiple copies of the **PAS for Windows** tile that you can assign to different isolation segments, use the Replicator tool as follows:
 
 1. Download the Replicator tool from the **Pivotal Cloud Foundry Runtime for Windows** section of [Pivotal Network](https://network.pivotal.io/products/p-windows-runtime).
 
@@ -108,3 +109,15 @@ You can use the Replicator tool to copy the **PAS for Windows** tile and create 
 
 1. Install and configure the Windows isolation segment, using the new `.pivotal` file and following the procedures in this topic, starting with the **Import a Product** step of [Step 2: Install the Tile](#install).
 
+###<a id='assign-isolation'></a> Assign a Tile to an Isolation Segment
+
+To assign a PAS for Windows tile to an isolation segment, perform the following steps:
+
+1. Open the **Application Containers** pane.
+
+    <%= image_tag('app_containers_segment_name.png') %>
+1. Under **Segment Name**, enter the name for the isolation segment to associate the tile with. If you are creating a new isolation segment, ensure that this name is unique across your PCF deployment.
+
+1. Click **Save**.
+
+1. If you are creating a new isolation segment, follow the steps in the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic to add the isolation segment to the Cloud Controller Database (CCDB).
