--- a/docs-content/about-windows-stemcells.html.md.erb
+++ b/docs-content/about-windows-stemcells.html.md.erb
@@ -7,15 +7,15 @@ owner: Greenhouse
 
 ## <a id="overview"></a> Overview
 
-A "stemcell" is a customized operating system image containing the filesystem for BOSH-managed virtual machines. When deployed, it includes a process, the _BOSH Agent_, which is pre-configured to communicate with the orchestrating VM, the _BOSH Director_.
-The BOSH Agent is responsible for executing and monitoring "jobs" on the VM.
+A _stemcell_ is a customized operating system image containing the filesystem for BOSH-managed virtual machines. When deployed, it includes a process, the _BOSH Agent_, which is pre-configured to communicate with the orchestrating VM, the _BOSH Director_.
+The BOSH Agent is responsible for executing and monitoring jobs on the VM.
 
 PCF Runtime for Windows deployments currently use a stemcell based on Windows Server 2012R2.
 
 
 ## <a id="sizing"></a> Root Disk Sizing
 
-The size of the stemcell's root disk determines the minimum root disk size of any Windows VM that the director can create from that stemcell. The relationship between a stemcell's disk size and the root disk size of the Windows cells depends on your IaaS as shown in the table below.
+The size of the stemcell's root disk determines the minimum root disk size of any Windows VM that the BOSH Director can create from that stemcell. The relationship between a stemcell's disk size and the root disk size of the Windows cells depends on your IaaS as shown in the table below.
 
 <table id='disk-sizes' border="1" class="nice" >
   <tr>
@@ -40,7 +40,7 @@ The size of the stemcell's root disk determines the minimum root disk size of an
   </tr>
   <tr>
     <th>vSphere</th>
-    <td>Recommended 128GB+<sup>\*</sup></td>
+    <td>Recommended 128GB+<sup>*</sup></td>
     <td>Same as stemcell minimum root disk size</td>
   </tr>
 </table>
@@ -52,9 +52,9 @@ In Runtime for Windows, under **Resource Config**, when you select a VM type, th
 
 ## <a id="light-stemcells"></a> Light Stemcells
 
-"Light" stemcells are metadata files that enable an operator to deploy virtual machines without uploading the full operating system manually. Light stemcells are available for Microsoft Azure, AWS, and GCP, which typically bill a surcharge for the associated Windows licensing cost. See the documentation on those IaaSes for details.
+_Light stemcells_ are metadata files that enable an operator to deploy virtual machines without uploading the full operating system manually. Light stemcells are available for Microsoft Azure, AWS, and GCP, which typically bill a surcharge for the associated Windows licensing cost. See the documentation on those IaaSes for details.
 
-Specific documentation for light stemcells available for the Runtime for Windows tile is below:
+Below is IaaS-specific documentation for light stemcells you can use with the Runtime for Windows tile:
 
 + <a href="../windows/azure-light-stemcell.html" class="subnav">Deploying on Azure</a>
 
@@ -63,6 +63,6 @@ Specific documentation for light stemcells available for the Runtime for Windows
 
 Because of the constraints placed on the distribution of Windows OS by Microsoft's licensing terms, operators must build stemcells for on-premise deployments from OS disk images (e.g. ISO files) licensed to them directly from Microsoft. This typically involves starting a Windows virtual machine, installing the BOSH agent and associated software, then exporting its disk image and converting it to a stemcell format.
 
-Below is the documentation currently available for building stemcells for the Runtime for Windows tile:
+Below is IaaS-specific documentation for building stemcells for the Runtime for Windows tile:
 
 + <a href="../windows/vsphere-stemcell-build.html" class="subnav"> vSphere Stemcell Build</a>
