--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -11,9 +11,9 @@ Operators can install PCF Runtime for Windows on Microsoft Azure, VMware vSphere
 
 ## <a id='overview'></a>Overview
 
-Operators who want to enable developers to push .NET Framework applications can deploy Windows-based Diego Cells in PCF via the PCF Runtime for Windows tile.
+Operators who want to enable developers to push .NET Framework applications can deploy Windows-based Diego cells in PCF via the PCF Runtime for Windows tile.
 
-Deploying this tile creates a separate BOSH deployment populated with the Garden-Windows BOSH release, which runs on a Windows cell built from a Windows Server 2012R2 stemcell, similarly to how the Elastic Runtime Tile deploys Linux-based Diego Cells.
+Deploying this tile creates a separate BOSH deployment populated with the Garden-Windows BOSH release, which runs on a Windows cell built from a Windows Server 2012R2 stemcell. This lets PCF deploy Windows-based Diego cells in addition to Linux-based Diego cells.
 
 Once the Windows cell is running and after developers build their applications, they can then specify the `windows2012R2` stack when pushing .NET Framework apps from the command line or PowerShell session. Using the Diego infrastructure, PCF passes the app to the Windows cell in the Runtime for Windows deployment. The diagram below illustrates the process.
 
@@ -87,9 +87,9 @@ PCF Runtime for Windows has the following known issues:
 
 * In the PCF Runtime for Windows tile **Credentials** tab, the `vcap` credentials that appear when you click **VM Credentials** > **Link to Credential** do not apply to Windows cells, since they do not yet have a vcap user.
 
-* Under **VM Options** > **Manage Administrator Password** > **Set the password**, setting the "Administrator" user password has the following issues:
+* Under **VM Options** > **Manage Administrator Password** > **Set the password**, setting the `Administrator` user password has the following issues:
 
-  - For Azure-hosted deployments: Setting the password directly does not yet work. All passwords for the user called "Administrator" will be randomized by default. Please use the following workarounds to access the VM directly:
+  - For Azure-hosted deployments: Setting the password directly does not yet work. All passwords for the user called `Administrator` will be randomized by default. Please use the following workarounds to access the VM directly:
 
       - Create a user in the Azure cloud management console.
       - Use the [Enable SSH](#) feature.
@@ -100,9 +100,9 @@ PCF Runtime for Windows has the following known issues:
       - Create a user in the GCP cloud management console.
       - Use the [Enable SSH](#) feature.
 
-      - For AWS and vSphere deployments: You can set a password for the user called "Administrator," but the password must be 8-14 characters and must use letters, numbers, and the `!` character, which is the only working special character.
+      - For AWS and vSphere deployments: You can set a password for the user called `Administrator,` but the password must be 8-14 characters and must use letters, numbers, and the `!` character, which is the only working special character.
 
-      - For all IaaSes, for stemcell versions 1200.5 and later, the password for the user called "Administrator" is randomized by default to provide additional security in production settings.
+      - For all IaaSes, for stemcell versions 1200.5 and later, the password for the user called `Administrator` is randomized by default to provide additional security in production settings.
 
 * The controls in the **Advanced Features** pane have no effect.
 
