add OCI Limitation to PASW [#152735348]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -52,3 +52,11 @@ The minimum resource requirement for each Windows cell is:
 ### <a id='dev'></a>Developer Guide
 
 * <a href="using.html" class="subnav">Developing and Deploying .NET Apps</a>
+
+## <a id='limitations'></a>Limitation
+
+PAS for Windows has the following limitation:
+
+* You cannot push Docker or other OCI-compatible images to Windows cells.
+
+This limitation will be addressed in subsequent versions of the product.
