--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -14,59 +14,11 @@ There are two settings in the PAS tile that affect the Windows cells installed b
 
 ##<a id='install'></a> Step 2: Install the Tile
 
-1. Download the product file from the **PAS for Windows** section of [Pivotal Network](https://network.pivotal.io/products/runtime-for-windows).
-
-1. Navigate to the Ops Manager Installation Dashboard and click **Import a Product** to upload the product file. 
-
-1. Click **+** under the uploaded **PAS for Windows** tile to add it to your staging area.
+<%= partial "install-tile" %>
 
 ##<a id='config'></a> Step 3: Configure and Deploy the Tile
 
-1. Click the newly added **PAS for Windows** tile.
-
-    <%= image_tag('pcf-windows-tile-orange-1-12.png') %>
-
-1. Click **Assign AZs and Networks** or **Assign Networks**. The name of the section varies depending on your IaaS.
-
-1. Assign your AZs and networks and click **Save**.
-
-1. Click **VM Options**. 
-
-    <%= image_tag('vm-options.png') %>
-
-1. Specify how you would like to manage the administrator password for your Windows VMs. The default option is to **Use the Windows default password**.
-1. (Optional) Select the **BETA: Enable BOSH-native SSH support on all VMs** checkbox to start the Microsoft beta port of the OpenSSH daemon on port 22 on all VMs. Users will be able to SSH onto Windows VMs with the `bosh ssh` command, and enter a CMD terminal as an administrator user. They can then run `powershell.exe` to start a PowerShell session.
-
-    <p class="note"><strong>Note</strong>: This feature is beta and not considered production-ready.</p>
-
-1. (Optional) If you want all VMs to support connection via Remote Desktop Protocol (RDP), click **Enable Remote Desktop Protocol**. 
-
-1. (Optional) If you want to configure a Key Management Service (KMS) that your volume-licensed Windows cell can register with, perform the following steps:
-    1. Click **Enable**
-    2. For the **Host** field, enter the KMS hostname.
-    3. For the **Port** field, enter the port number. The default port number is `1688`.
-
-    ![The enable KMS text fields: host and port](enable-kms.png)
-
-1. (Optional) If you want your PAS for Windows application workloads to be deployed to an isolation segment, perform the steps in [Assign a Tile to an Isolation Segment](#assign-isolation) below.
-
-1. Click **Errands**. Pivotal recommends that you set the **Install HWC Buildpack Errand** to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
-	
-    <%= image_tag('errands-hwc.png') %>
-
-1. Click **Resource Config** and adjust the number and VM types of your Windows cells as needed.
-
-1. Click **Save**.
-
-1. Click **Stemcell**. Record the stemcell version number required by the tile. 
-
-    <%= image_tag('pcf-windows-tile-stemcell.png') %>
-
-1. Retrieve the stemcell that you downloaded or created in [Download or Create a Windows Stemcell](./stemcells.html).
-
-1. Click **Save**.
-
-1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the PAS for Windows tile.
+<%= partial "configure-tile" %>
 
 ##<a id='copy'></a> Step 4: (Optional) Create More Tiles
 
