--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -77,13 +77,13 @@ Isolation segments are compartmentalized resource pools for Diego cells. The cel
 
 To run Windows cells in multiple isolation segments, you need to create and install multiple PCF Runtime for Windows tiles and configure each to run in a different isolation segment.
 
-If the isolation segments do not already exist in the Cloud Controller database, you need to create them there.
+If the isolation segments do not already exist in the Cloud Controller Database (CCDB), you need to create them there.
 
 See [Replicate a Tile](#replicate) for how to create multiple copies of the PCF Runtime for Windows tile.
 
 See [Assign a Tile to an Isolation Segment](#assign-isolation) for how to associate a PCF Runtime for Windows tile with an isolation segment, so that its cells run in that segment. 
 
-See the the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic for how to add an isolation segment to the Cloud Controller Database (CCDB).
+See the the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic for how to add an isolation segment to the CCDB.
 
 ###<a id='replicate'></a> Replicate a Tile
 
@@ -119,5 +119,5 @@ To assign a PCF Runtime for Windows tile to an isolation segment, perform the fo
 
 1. Click **Save**.
 
-1. If you are creating a new isolation segment, follow the steps in the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic to add the isolation segment to the Cloud Controller Database (CCDB).
+1. If you are creating a new isolation segment, follow the steps in the [Create an Isolation Segment](../adminguide/isolation-segments.html#create-an-is) section of the <em>Managing Isolation Segments</em> topic to add the isolation segment to the CCDB.
 
