--- a/docs-content/migrating.html.md.erb
+++ b/docs-content/migrating.html.md.erb
@@ -17,6 +17,44 @@ If you are installing PAS for Windows to new apps only, see [Installing and Conf
 
 ## <a id="push-app"></a> Step 3: Push New App
 
+Pivotal recommends you use the blue-green deployment method for high availability. For more information about blue-green deployments, see [Using Blue-Green Deployment to Reduce Downtime and Risk](../devguide/deploy-apps/blue-green.html).
+
+Perform the following steps to deploy an app with the blue-green method:
+
+1. Run `cf login` to log in to the cf CLI.
+
+1. Choose your org and space.
+1. `cd` to the location of your app.
+<pre class="terminal">$ cd /MY/WINDOWS/APP</pre>
+
+1. Push a "blue" app. Pivotal recommends you append `-blue` to your app name.
+<pre class="terminal">$ cf push APP\_NAME-blue -s windows -b BUILDPACK -n HOSTNAME </pre>
+The push command must include the `-s` flag to specify the stack as windows, which instructs PCF to run the app in the Windows cell. 
+
+1. Push the "green" app with `--no-start` so it creates the instance VMs but does not start the app. Remember to include `-s windows`.
+<pre class="terminal">$ cf push APP\_NAME-green -s windows -b BUILDPACK -n HOSTNAME --no-start </pre>
+
+1. Switch the router so all incoming requests go to the Green app _and_ the Blue app using the [cf map-route](http://cli.cloudfoundry.org/en-US/cf/map-route.html) command.
+<pre class="terminal">
+	$ cf map-route APP\_NAME-green DOMAIN -n HOSTNAME 
+</pre>
+
+1. Unmap the blue app's route by running the [cf unmap-route](http://cli.cloudfoundry.org/en-US/cf/unmap-route.html) command.
+<pre class="terminal">$ cf unmap-route APP\_NAME-blue DOMAIN -n HOSTNAME </pre>
+
+1. See that your blue and green apps are up and running. If you experience a problem, see [Troubleshooting Application Deployment and Health](../devguide/deploy-apps/troubleshoot-app-health.html).
+
 ## <a id="delete-app"></a> Step 4: Delete Old App
 
+To delete old apps, run the [cf delete](http://cli.cloudfoundry.org/en-US/cf/delete.html) command for each app. To also delete any mapped routes, run the command with the `-r` flag.<pre class="terminal">$ cf delete OLD\_APP\_NAME -r</pre>
+
+
 ## <a id="uninstall-old-tile"></a> Step 5: (Optional) Uninstall Old Tile
+
+If you are no longer using the **Windows 2012R2** tile, perform the following steps:
+
+1. From the Installation Dashboard, click the trash icon on the **Windows 2012R2** tile to remove that product. In the **Delete Product** dialog box that appears, click **Confirm**.
+
+1. In the Pending Changes view, click **Apply Changes**.
+
+    After you delete a product, the product tile is removed from the installation and the Installation Dashboard. However, the product appears in the Available Products view.
