make small changes to better match style guide

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -29,7 +29,7 @@ When configuring the Windows deployment, the minimum resource requirements for e
 
 By design, Runtime for Windows only supports deployments based on Windows Server 2012R2.
 
-Due to Microsoft's licensing requirements, operators must either bring their own licensed copies of Windows Server (for on-premise deployments) or pay the surcharges associated with Windows Server licensing determined by the IaaS provider on Azure, AWS, and GCP.
+Due to Microsoft's licensing requirements, operators must either bring their own licensed copies of Windows Server for on-premise deployments or pay the surcharges associated with Windows Server licensing determined by the IaaS provider on Azure, AWS, and GCP.
 
 
 ## <a id='understand'></a>Understanding PCF Runtime for Windows ##
